finish straighten front page using top and bottom lines

--- a/match-template.ipynb
+++ b/match-template.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "17efa5f5-4991-4a3d-a90e-d89c349ad56b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-07-27 00:16:56.266928: I tensorflow/stream_executor/platform/default/dso_loader.cc:53] Successfully opened dynamic library libcudart.so.11.0\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from glob import glob\n",
@@ -13,168 +21,38 @@
     "import os\n",
     "import cv2\n",
     "import math\n",
-    "import utils\n",
-    "import imutils\n",
-    "\n",
-    "\n",
-    "def disp_image(image):\n",
-    "    plt.figure(figsize=(25, 25))\n",
-    "    plt.imshow(image)\n",
-    "    plt.show()"
+    "import utils\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 4,
    "id": "4f05496c-be1b-4cd5-b3ce-f3f6087f34a5",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "image_arr [[0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " ...\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]]\n",
-      "tl [73 13]\n",
-      "br [3318 2293]\n",
-      "height 3245\n",
-      "width 2280\n",
-      "(24, 0, 2218, 18) 2280\n",
-      "(5, 3104, 2221, 17) 2280\n",
-      "tl (24, 0)\n",
-      "tr (2241, 10)\n",
-      "bl (5, 3104)\n",
-      "br (2225, 3113)\n"
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (3277699023.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_835504/3277699023.py\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
    "source": [
-    "orig = cv2.imread(\"/home/dan/Downloads/poulespng/poule-7.pdf.png\", cv2.IMREAD_UNCHANGED)\n",
-    "tmpl = cv2.imread(\"./data/pngs/poule-front-content-tmpl.png\", cv2.IMREAD_UNCHANGED)\n",
+    "for i in range(0, 121):\n",
+    "    if (i % 2 == 0): continue\n",
+    "    filename = f\"/home/dan/Downloads/poulespng/poule-{i}.pdf.png\"\n",
+    "    print(filename)\n",
+    "    orig = cv2.imread(filename, cv2.IMREAD_UNCHANGED)\n",
     "\n",
-    "blur_amount = (13, 13)\n",
-    "crop_margin_px = 80\n",
-    "\n",
-    "debug = True\n",
-    "\n",
-    "# Crop inward, there won't be anything at the edges except for scanning artifacts\n",
-    "orig = orig[crop_margin_px:-crop_margin_px, crop_margin_px:-crop_margin_px]\n",
-    "\n",
-    "img_gray = cv2.cvtColor(orig, cv2.COLOR_BGR2GRAY)\n",
-    "thresh = cv2.GaussianBlur(thresh, blur_amount, 0)\n",
-    "th, thresh = cv2.threshold(img_gray, 254, 255, cv2.THRESH_BINARY)\n",
-    "thresh = cv2.erode(thresh, None, iterations=3)\n",
-    "\n",
-    "corner_crop_px = 300\n",
-    "\n",
-    "thresh = utils.crop_to_content(255 - thresh)\n",
-    "\n",
-    "tl = thresh[\n",
-    "    0:corner_crop_px, \n",
-    "    0:corner_crop_px\n",
-    "]\n",
-    "bl = thresh[\n",
-    "    thresh.shape[0] - corner_crop_px:thresh.shape[0],\n",
-    "    0:corner_crop_px\n",
-    "]\n",
-    "tr = thresh[\n",
-    "    0:corner_crop_px, \n",
-    "    thresh.shape[1] - corner_crop_px:thresh.shape[1]\n",
-    "]\n",
-    "br = thresh[\n",
-    "    thresh.shape[0] - corner_crop_px:thresh.shape[0],\n",
-    "    thresh.shape[1] - corner_crop_px:thresh.shape[1]\n",
-    "]\n",
-    "\n",
-    "#     copy = image.copy()\n",
-    "#     # these are coords yay!\n",
-    "#     cnts = cv2.findContours(copy, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "#     cnts = imutils.grab_contours(cnts)\n",
-    "#     copy = cv2.cvtColor(copy, cv2.COLOR_BGR2RGB)\n",
-    "# #     cv2.drawContours(copy, cnts, -1, (0, 255, 0), 1)\n",
-    "#     areas = [cv2.contourArea(c) for c in cnts]\n",
-    "# #     areas = [a for a in areas if a > 200.0 and a < 2000.0]\n",
-    "\n",
-    "def findHoriLines(image, max_height=20, min_width=100, debug=False):\n",
-    "    # these are coords yay!\n",
-    "    cnts = cv2.findContours(image, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "    cnts = imutils.grab_contours(cnts)\n",
-    "    areas = [cv2.contourArea(c) for c in cnts]\n",
-    "    polys = [cv2.approxPolyDP(c, 3, True) for c in cnts]\n",
-    "    rects = [cv2.boundingRect(p) for p in polys]\n",
-    "    \n",
-    "    result = []\n",
-    "    for r in rects:\n",
-    "        x, y, w, h = r\n",
-    "\n",
-    "        if abs(h) > max_height: continue\n",
-    "        if abs(w) < min_width: continue\n",
-    "\n",
-    "        result.append(r)\n",
-    "    \n",
-    "    # Sort top to bottom\n",
-    "    result.sort(key=lambda r: r[1])\n",
-    "    \n",
-    "    if (debug is True):\n",
-    "        copy = image.copy()\n",
-    "        copy = cv2.cvtColor(copy, cv2.COLOR_BGR2RGB)\n",
-    "        cv2.drawContours(copy, cnts, -1, (0, 255, 255), 2)\n",
-    "        \n",
-    "        for x, y, w, h in result:\n",
-    "            cv2.rectangle(copy, (x, y), (x + w, y + h), (255, 0, 0), 5)\n",
-    "        disp_image(copy)\n",
-    "\n",
-    "    return result\n",
-    "\n",
-    "[ first, last ] = findHoriLines(thresh, debug=False)\n",
-    "\n",
-    "print(first, len(thresh[first[0]]))\n",
-    "print(last, len(thresh[first[1]]))\n",
-    "\n",
-    "# How to find corners\n",
-    "# for idx in range(first[1], first[1] + first[3]):\n",
-    "#     y_px = thresh[idx][22:]\n",
-    "#     print(y_px)\n",
-    "\n",
-    "\n",
-    "# NOTE x: 0, y: 1, w: 2, h: 3\n",
-    "# So we go over each row of our first line\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(\"tl\", find_corner_of_line(thresh, first[0]               , first[1], first[3]))\n",
-    "print(\"tr\", find_corner_of_line(thresh, first[0] + first[2] - 1, first[1], first[3]))\n",
-    "print(\"bl\", find_corner_of_line(thresh, last[0]                , last[1],  last[3]))\n",
-    "print(\"br\", find_corner_of_line(thresh, last[0]  + last[2]  - 1, last[1],  last[3]))\n",
-    "\n",
-    "# TODO now find most extreme pixels\n",
-    "# The location that we return should remap onto the original image\n",
-    "# So tl = found extreme corner = tl_xc.y + any_offset coming from other cropping\n",
-    "# Or we just don't care:\n",
-    "# - Crop naive to strip artifacts  ✓\n",
-    "# - Crom to content                ✓\n",
-    "# - Find corners                   ✓\n",
-    "# - hindHomography()\n",
-    "# - persectiveWarp()\n",
-    "# - Resize\n",
-    "# - ...\n",
-    "# - Profit"
+    "    try:\n",
+    "        utils.straighten_front(orig, debug=True, pad=200)\n",
+    "    except:\n",
+    "        print"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5efc9e0f-3c52-401a-83e9-c01a1c2e509f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
